force-app/main/default/objects/DuplicateGroupDetail__c/DuplicateGroupDetail__c.object-meta.xml
<CustomObject>
    <description
  >Stores details about duplicate groups found during a duplicate detection run</description>
    <label>Duplicate Group Detail</label>
    <nameField>
        <displayFormat>DGD-{0000}</displayFormat>
        <label>Group ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Group Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>