force-app/main/default/objects/DuplicateGroupDetail__c/fields/DuplicateRecordIds__c.field-meta.xml
<CustomField>
    <fullName>DuplicateRecordIds__c</fullName>
    <description>Comma-separated list of duplicate record IDs</description>
    <label>Duplicate Record IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>