force-app/main/default/objects/DuplicateGroupDetail__c/fields/DuplicateRunResult__c.field-meta.xml
<CustomField>
    <fullName>DuplicateRunResult__c</fullName>
    <description>Parent duplicate run result record</description>
    <label>Duplicate Run Result</label>
    <referenceTo>DuplicateRunResult__c</referenceTo>
    <relationshipLabel>Duplicate Group Details</relationshipLabel>
    <relationshipName>DuplicateGroupDetailRecords</relationshipName>
    <type>Lookup</type>
</CustomField>