force-app/main/default/objects/DuplicateGroupDetail__c/fields/FieldValues__c.field-meta.xml
<CustomField>
    <fullName>FieldValues__c</fullName>
    <description>Display-friendly field values that matched</description>
    <label>Field Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>