force-app/main/default/objects/DuplicateGroupDetail__c/fields/GroupKey__c.field-meta.xml
<CustomField>
    <fullName>GroupKey__c</fullName>
    <description>Unique key for this group of duplicates</description>
    <label>Group Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>