force-app/main/default/objects/DuplicateGroupDetail__c/fields/MasterRecordId__c.field-meta.xml
<CustomField>
    <fullName>MasterRecordId__c</fullName>
    <description>ID of the record selected as master</description>
    <label>Master Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>