force-app/main/default/objects/DuplicateGroupDetail__c/fields/MatchScore__c.field-meta.xml
<CustomField>
    <fullName>MatchScore__c</fullName>
    <description>Match score for this duplicate group (percentage)</description>
    <label>Match Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>