force-app/main/default/objects/DuplicateGroupDetail__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>Name of the object for this group</description>
    <label>Object Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>