force-app/main/default/objects/DuplicateGroupDetail__c/fields/RecordCount__c.field-meta.xml
<CustomField>
    <fullName>RecordCount__c</fullName>
    <description>Number of records in this duplicate group</description>
    <label>Record Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>